--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -79,6 +79,17 @@ pre{padding:1.333 1.333;}
 .badge-following:hover{background-color:#356635;}
 .badge-not-following{display:inline-block;*display:inline;*zoom:1;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;font-weight:normal;margin-right:5px;background-color:#3a87ad;}
 .badge-not-following:hover{background-color:#2d6987;}
+.tooltip{position:absolute;z-index:1020;display:block;visibility:visible;padding:5px;font-size:11px;filter:alpha(opacity=0);-khtml-opacity:0;-moz-opacity:0;opacity:0;}.tooltip.in{filter:alpha(opacity=80);-khtml-opacity:0.8;-moz-opacity:0.8;opacity:0.8;}
+.tooltip.top{margin-top:-2px;}
+.tooltip.right{margin-left:2px;}
+.tooltip.bottom{margin-top:2px;}
+.tooltip.left{margin-left:-2px;}
+.tooltip.top .tooltip-arrow{bottom:0;left:50%;margin-left:-5px;border-left:5px solid transparent;border-right:5px solid transparent;border-top:5px solid #000000;}
+.tooltip.left .tooltip-arrow{top:50%;right:0;margin-top:-5px;border-top:5px solid transparent;border-bottom:5px solid transparent;border-left:5px solid #000000;}
+.tooltip.bottom .tooltip-arrow{top:0;left:50%;margin-left:-5px;border-left:5px solid transparent;border-right:5px solid transparent;border-bottom:5px solid #000000;}
+.tooltip.right .tooltip-arrow{top:50%;left:0;margin-top:-5px;border-top:5px solid transparent;border-bottom:5px solid transparent;border-right:5px solid #000000;}
+.tooltip-inner{max-width:200px;padding:3px 8px;color:#eadecc;text-align:center;text-decoration:none;background-color:#000000;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
+.tooltip-arrow{position:absolute;width:0;height:0;}
 html{height:auto;}
 body{background:#eadecc;background-image:-moz-linear-gradient(top, #eadecc, #e6d7c1);background-image:-ms-linear-gradient(top, #eadecc, #e6d7c1);background-image:-o-linear-gradient(top, #eadecc, #e6d7c1);background-image:-webkit-gradient(linear, left top, left bottom, from(#eadecc), to(#e6d7c1));background-image:-webkit-linear-gradient(top, #eadecc, #e6d7c1);background-image:linear-gradient(top, #eadecc, #e6d7c1);background-repeat:no-repeat;position:relative;}
 a,a:visited{color:#3d8fb3;text-decoration:none;}
