--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -595,6 +595,8 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 #main #right .generic-portlet h3{font-size:1.333;margin-top:0;}
 section>header.header{margin-bottom:1em;}
 section>header>h1>.badge{font-size:0.45em;}
+.people-section{display:block;float:left;line-height:1.1em;}.people-section .column{width:100%;}
+.people-section li{margin-bottom:0.5em;}
 .pushdown{position:relative;overflow:hidden;padding:.889em;background-color:#aaaaaa;background-image:url('../img/vertical_stripes.png');background-position:top left;background-repeat:repeat;display:none;}.pushdown:before{content:"";font-size:0;position:absolute;top:0;left:-25%;width:150%;height:100%;-webkit-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);-moz-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);pointer-events:none;}
 .pushdown .thereIsMore{text-shadow:0 1px 0 rgba(255, 255, 255, 0.4);}
 .open .pushdown{display:block;}
