reverted back calendar list-view row width to original state

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -321,7 +321,7 @@
     ----------------------------------------------- */
 
     table.cal-body {
-        width: 100%;
+        width: 667px;
     }
 
     table.cal-scroll-body {
@@ -1010,8 +1010,7 @@
         ----------------------------------------------- */
         table.cal-body {
           /*width: 667px;*/ /*main diff: 231 */
-          // width: 900px - 1;
-          width: 100%;
+          width: 900px - 1;
         }
         table.cal_scroll {
           /*width: 646px;*/
