ux2: Need More Padding for Calendar Day Labels on Month View, fixes LP: #1011818

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -230,6 +230,7 @@
     body .cal_blue_all {
       color: #fff;
       background-color: #3366cc;
+
     }
 
     body .cal_aqua {
@@ -586,7 +587,8 @@
     .cal_month .cal_label {
       height: 16px;
       font-size: 115%;
-      line-height: 1em;
+      line-height: 0.4em;
+      /*line-height: 1em;*/
       text-align: right;
       padding: 0;
     }
