first pass at moving feeds to ux2

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -9,6 +9,7 @@
 @import "elements/badges.less";
 @import "elements/tooltips.less";
 //@import "elements/popovers.less";
+@import "elements/contentfeeds.less";
 
 
 /* @group GENERIC LAYOUT-WIDE ELEMENTS' STYLES */
