--- a/karl/views/static/ux2/plugins/popper-tagbox/tests/test.html
+++ b/karl/views/static/ux2/plugins/popper-tagbox/tests/test.html
@@ -7,15 +7,9 @@
       <!-- (Must come before jquery) -->
       <script src="../../testlib/jquery-animation-workaround.js" type="text/javascript"></script>
 
-      <!-- Load jQuery and the UI widget factory -->
-      <!--
-      <script src="../../testlib/jquery-1.6.2.min.js" type="text/javascript"></script>
-      <script src="../../testlib/jquery.ui.widget.js" type="text/javascript"></script>
-      -->
-
-      <!-- Load jQuery and jQuery UI, both JS and CSS -->
-      <script src="../../testlib/jquery-1.6.2-jquery-ui-1.9m5.min.js" type="text/javascript"></script>
-      <link href="../../testlib/jquery-ui-1.9m5-unthemed.min.css" type="text/css" rel="stylesheet" />
+      <!-- Load jQuery and dependancies -->
+      <script src="../../testlib/jquery-1.7.1.min.js" type="text/javascript"></script>
+      <script src="../../testlib/jquery-ui-1.9m5.min.js" type="text/javascript"></script>
 
       <!-- Qunit and other testing goodies -->
       <script src="../../testlib/qunit-git.js" type="text/javascript"></script>
@@ -24,9 +18,8 @@
       <script src="../../testlib/sinon-ie-1.3.1.js" type="text/javascript"></script>
       <script src="../../testlib/jquery.simulate.js" type="text/javascript"></script>
 
-      <!-- The widget plugin JS and CSS -->
+      <!-- The widget plugin -->
       <script src="../popper.tagbox.js" type="text/javascript"></script>
-      <link href="../popper.tagbox.css" type="text/css" rel="stylesheet" />
 
       <!-- The test suite -->
       <script src="test.js" type="text/javascript"></script>
