moved calendar tooltip to popover

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -963,6 +963,9 @@
 
     /** =CALENDAR TOOLTIP
     ----------------------------------------------- */
+    .cal_popover {
+      display: none;
+    }
     // .tooltip {
     //   display: none;
     //   font-size: 110%;
@@ -1396,7 +1399,5 @@ table#calendar span.middot {
             .css3_border_radius(0 .3em 0 0);
         }
     }
-
-
 }
 
