--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -8,7 +8,7 @@
 @import "elements/labels.less";
 @import "elements/badges.less";
 @import "elements/tooltips.less";
-//@import "elements/popovers.less";
+@import "elements/popovers.less";
 @import "elements/contentfeeds.less";
 
 
