--- a/karl/views/static/ux2/css/elements/popovers.less
+++ b/karl/views/static/ux2/css/elements/popovers.less
@@ -8,6 +8,7 @@
   z-index: @zindexPopover;
   display: none;
   padding: 5px;
+  margin: 0;
   &.top    { margin-top:  -5px; }
   &.right  { margin-left:  5px; }
   &.bottom { margin-top:   5px; }
@@ -24,6 +25,7 @@
 }
 .popover-inner {
   padding: 3px;
+  margin: 0;
   width: 280px;
   overflow: hidden;
   background: @black; // has to be full background declaration for IE fallback
@@ -33,6 +35,7 @@
 }
 .popover-title {
   padding: 9px 15px;
+  margin: 0;
   line-height: 1;
   background-color: #f5f5f5;
   border-bottom:1px solid #eee;
@@ -40,6 +43,7 @@
 }
 .popover-content {
   padding: 14px;
+  margin: 0;
   background-color: @white;
   .css3_border_radius(0 0 3px 3px);
   .css3_background_clip(padding-box);
