changed teaser on intranet home page to be centred

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -918,6 +918,10 @@ body > footer {
                 margin-top: 0;
             }
         }
+        .teaser {
+            text-align: center;
+            overflow: hidden;
+        }
     }
     #right {
         .col(3);
