--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -647,6 +647,7 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 #main #left .menu ul.level2>li:last-child{border-bottom:none;}
 #main #left .menu li{margin-bottom:0.5em;padding-bottom:0.5em;}
 #main #center{display:inline;float:left;width:47.91666666666667%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}#main #center .generic-portlet{margin-top:1em;text-shadow:none;position:relative;border-bottom:1px #c8b6a1 dotted;}#main #center .generic-portlet h3{font-size:1.333;margin-top:0;}
+#main #center .teaser{text-align:center;overflow:hidden;}
 #main #right{display:inline;float:left;width:22.916666666666664%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}#main #right .generic-portlet{zoom:1;*zoom:1;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;margin:0 0.6665em 1.333em;padding:0.6665em;background:#c8b6a1;text-shadow:none;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}#main #right .generic-portlet:before,#main #right .generic-portlet:after{display:table;content:"";zoom:1;}
 #main #right .generic-portlet:after{clear:both;}
 #main #right .generic-portlet h3{font-size:1.333;margin-top:0;}
@@ -982,5 +983,4 @@ table#calendar span.middot{font-weight:bold;font-size:160%;vertical-align:middle
 .setup-add-cal table.layers{background-color:transparent;}.setup-add-cal table.layers td{border-top:0;border:0;padding:0;}
 .setup-add-cal tr:first-child>th:first-child{-webkit-border-radius:0.3em 0 0 0;-moz-border-radius:0.3em 0 0 0;border-radius:0.3em 0 0 0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
 .setup-add-cal tr:first-child>th:last-child{-webkit-border-radius:0 0.3em 0 0;-moz-border-radius:0 0.3em 0 0;border-radius:0 0.3em 0 0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
-.cal-popover{left:-25px;}
 .tiny-imagedrawer-dialog.ui-widget{font-size:1em;}
