--- a/karl/views/static/ux2/css/elements/actions.less
+++ b/karl/views/static/ux2/css/elements/actions.less
@@ -1,5 +1,5 @@
 ul.actionsMenu {
-	display: none;  
+	display: none; 
 }
 
 @media only screen and (min-width: 768px) {
@@ -15,7 +15,7 @@ ul.actionsMenu {
         position: relative;
     	.horList(right);
     	padding: 0;
-    	margin: 0;
+    	margin: 0 0 0 1em;
     	width: auto;
     	height: auto;
 	    .smaller();
