--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -522,6 +522,9 @@ form#send-message {
 #csv-action {
     background-position: -78px 0%;
 }
+#email-action {
+    background-position: -104px 0%;
+}
 
 #tabular-view,
 #picture-view {
