--- a/karl/views/static/tinymce-plugins/imagedrawer/tests/test_notiny.html
+++ b/karl/views/static/tinymce-plugins/imagedrawer/tests/test_notiny.html
@@ -21,6 +21,7 @@
       <!-- Dependencies for the widget plugin -->
       <script src="../../../karl-plugins/karl-buttonset/karl.buttonset.js" type="text/javascript"></script>
       <script src="../../../karl-plugins/karl-multistatusbox/karl.multistatusbox.js" type="text/javascript"></script>
+      <script src="../../../karl-plugins/karl-slider/karl.slider.js" type="text/javascript"></script>
 
       <!-- The widget plugin-->
       <script src="../editor_plugin_src.js" type="text/javascript"></script>
