--- a/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/charmap.htm
+++ b/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/charmap.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>{#advanced_dlg.charmap_title}</title>
-	<script type="text/javascript" src="../../tiny_mce_popup.js?v={tinymce_version}"></script>
+    <script type="text/javascript" src="../../tinymce/min/tinymce-popup-utils.min.js"></script>
 	<script type="text/javascript" src="js/charmap.js?v={tinymce_version}"></script>
 </head>
 <body id="charmap" style="display:none" role="application">
