--- a/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/color_picker.htm
+++ b/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/color_picker.htm
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>{#advanced_dlg.colorpicker_title}</title>
-	<script type="text/javascript" src="../../tiny_mce_popup.js?v={tinymce_version}"></script>
-	<script type="text/javascript" src="../../utils/mctabs.js?v={tinymce_version}"></script>
+    <script type="text/javascript" src="../../tinymce/min/tinymce-popup-utils.min.js"></script>
 	<script type="text/javascript" src="js/color_picker.js?v={tinymce_version}"></script>
 </head>
 <body id="colorpicker" style="display: none" role="application" aria-labelledby="app_label">
