--- a/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/image.htm
+++ b/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/image.htm
@@ -2,9 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>{#advanced_dlg.image_title}</title>
-	<script type="text/javascript" src="../../tiny_mce_popup.js?v={tinymce_version}"></script>
-	<script type="text/javascript" src="../../utils/mctabs.js?v={tinymce_version}"></script>
-	<script type="text/javascript" src="../../utils/form_utils.js?v={tinymce_version}"></script>
+    <script type="text/javascript" src="../../tinymce/min/tinymce-popup-utils.min.js"></script>
 	<script type="text/javascript" src="js/image.js?v={tinymce_version}"></script>
 </head>
 <body id="image" style="display: none">
