--- a/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/link.htm
+++ b/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/link.htm
@@ -2,10 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>{#advanced_dlg.link_title}</title>
-	<script type="text/javascript" src="../../tiny_mce_popup.js?v={tinymce_version}"></script>
-	<script type="text/javascript" src="../../utils/mctabs.js?v={tinymce_version}"></script>
-	<script type="text/javascript" src="../../utils/form_utils.js?v={tinymce_version}"></script>
-	<script type="text/javascript" src="../../utils/validate.js?v={tinymce_version}"></script>
+    <script type="text/javascript" src="../../tinymce/min/tinymce-popup-utils.min.js"></script>
 	<script type="text/javascript" src="js/link.js?v={tinymce_version}"></script>
 </head>
 <body id="link" style="display: none">
