--- a/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/source_editor.htm
+++ b/karl/views/static/tinymce-plugins/theme-advanced-3.5.2/source_editor.htm
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>{#advanced_dlg.code_title}</title>
-	<script type="text/javascript" src="../../tiny_mce_popup.js?v={tinymce_version}"></script>
+    <script type="text/javascript" src="../../tinymce/min/tinymce-popup-utils.min.js"></script>
 	<script type="text/javascript" src="js/source_editor.js?v={tinymce_version}"></script>
 </head>
 <body onresize="resizeInputs();" style="display:none; overflow:hidden;">
