Fix the order of css resources that broke the ux2 livesearch .... and actually, while we are at it: import it via less rather than including it from the template directly, as this fits our general workflow better.

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -2,6 +2,8 @@
 @import "css/variables.less";
 @import "css/_grid.less";
 @import "css/_mixins.less";
+@import "plugins/popper-livesearch/popper.livesearch.css";
+@import "plugins/popper-pushdown/popper.pushdown.css";
 @import "plugins/popper-gridbox/karl.wikitoc.less";
 @import "plugins/popper-gridbox/popper.gridbox.less";
 @import "plugins/karl-multifileupload/multifileupload.less";
