fixed more link rendering on intranet right portlet

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -947,6 +947,11 @@ body > footer {
                 font-size: 1.333;
                 margin-top: 0;
             }
+            .more {
+                .btn();
+                .btn-small();
+                margin-bottom: 1em;
+            }
         }
     }
 }
