--- a/karl/views/static/ux2/css/elements/actions.less
+++ b/karl/views/static/ux2/css/elements/actions.less
@@ -15,14 +15,14 @@ ul.actionsMenu {
         position: relative;
     	.horList(right);
     	padding: 0;
-    	margin: 0 0 0 1em;
+    	margin: 0 1em;
     	width: auto;
     	height: auto;
 	    .smaller();
         // .clearfix();  	
     	> li {
     	    float: left;
-    	    margin-right: 1px;    	    
+    	    margin-right: 1px;
     	}
     	> li > a {
 	        color: @grayDark;
