refactored anonymous markup and css, reworked login, error and forbidden pages.

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -982,8 +982,8 @@ section > header > h1 {
 @import "elements/pushdowns.less";
 /* @end */
 
-/* @group LOGIN FORM */
-@import "elements/login-form.less";
+/* @group ANONYMOUS */
+@import "elements/anonymous.less";
 /* @end */
 
 /* @group 320 */
