removed bullet on intranet calendar portlet

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -920,6 +920,11 @@ body > footer {
                 font-size: 1.333;
                 margin-top: 0;
             }
+            ul#calendar_portlet {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+            }
             .more {
                 .btn();
                 .btn-small();
