ux2 Fix Chatter Profile Pictures to Display in IE8. Fixes: LP #1016082. .... The problem was the IMG {max-width: 100%;} which is overwritten in this context -> problem solved.

--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -177,9 +177,12 @@
 	}
 }
 .panel-item-avatar {
-	position: absolute;
+    position: absolute;
     left: .73em;
     top: .73em;
+    img {
+        max-width: none;
+    }
 }
 .panel-item-header {
     position: absolute;
