ux2 calendar: bring back the 100% layout for list (agenda) view, but make sure it happens in a way that it does not affect the day, week, month views that need a pixel correct rendering currently.

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -66,6 +66,8 @@
                   color: lighten(@baseColor1, 15%);
                 }
             }
+            // 100% width only in list view.
+            width: 100%;
         }
     }
 
