Activate more improved js tests for the new tinymce on ux2.

--- a/karl/views/static/ux2/plugins/qunit.html
+++ b/karl/views/static/ux2/plugins/qunit.html
@@ -13,6 +13,7 @@
     <li><a href="../../tinymce-plugins/wicked/tests/test.html">tinymce wicked</a></li>
     <li><a href="../../tinymce-plugins/imagedrawer/tests/test.html">tinymce imagedrawer</a></li>
     <li><a href="../../tinymce-plugins/imagedrawer/tests/test_notiny.html">tinymce imagedrawer "notiny" suite</a></li>
+    <li><a href="../../tinymce-plugins/kaltura/tests/test.html">tinymce kaltura</a></li>
   </ul>
 
 </body>
