--- a/karl/views/static/tinymce-plugins/kaltura/tests/test.html
+++ b/karl/views/static/tinymce-plugins/kaltura/tests/test.html
@@ -3,42 +3,35 @@
   <head>
       <title>tinymce kaltura plugin tests</title>
 
-      <!-- Load jQuery -->
-      <script src="http://www.google.com/jsapi"
-	      type="text/javascript"></script>
-      <script type="text/javascript">
-          google.load("jquery", "1.4.4");
-	    //google.load("jqueryui", "1.8.7");
-      </script>
-      <script src="https://github.com/reebalazs/bottlecap/raw/master/sl/jquery-ui-1.9m3.custom.min.js" type="text/javascript"></script>
-      <script src="http://jqueryui.com/themeroller/themeswitchertool/" type="text/javascript"></script>
+      <!-- Workaround prelude to make jquery animations work with sinon.clock -->
+      <!-- (Must come before jquery) -->
+      <script src="../../../ux2/plugins/testlib/jquery-animation-workaround.js" type="text/javascript"></script>
 
-      <!--link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/themes/smoothness/jquery-ui.css" /-->
-      <link rel="stylesheet" href="https://github.com/jquery/jquery-ui/raw/master/themes/base/jquery.ui.all.css" />
+      <!-- Load jQuery and JQuery-UI -->
+      <script src="../../../ux2/plugins/testlib/jquery-1.7.1.min.js" type="text/javascript"></script>
+      <script src="../../../ux2/plugins/testlib/jquery-ui-1.9m5.min.js" type="text/javascript"></script>
 
-      <!-- Test suite -->
-      <script type="text/javascript" src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js">//</script>
-      <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" />
-      <script type="text/javascript" src="http://soc.googlecode.com/hg/app/json.min/json2.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts_pre.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts.js">//</script>
-      <script type="text/javascript" src="http://github.com/eduardolundgren/jquery-simulate/raw/master/jquery.simulate.js">//</script>
+      <!-- Qunit and other testing goodies -->
+      <script src="../../../ux2/plugins/testlib/qunit-git.js" type="text/javascript"></script>
+      <link href="../../../ux2/plugins/testlib/qunit-git.css" type="text/css" rel="stylesheet" />
+      <script src="../../../ux2/plugins/testlib/sinon-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../ux2/plugins/testlib/sinon-ie-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../ux2/plugins/testlib/jquery.simulate.js" type="text/javascript"></script>
 
-      <!-- The widget plugin JS and CSS -->
-      <script src="../../../tiny_mce_src.js" type="text/javascript">//</script>
-      <script src="../../../jquery.tinysafe.js" type="text/javascript">//</script>
-      <!-- static js loading  -->
-      <script src="../../../themes/advanced/editor_template_src.js" type="text/javascript"></script>
-      <script src="../editor_plugin_src.js" type="text/javascript"></script>
-      <script src="../langs/en.js" type="text/javascript"></script>
-      <script src="../js/kaltura.js" type="text/javascript">//</script>
-      <script src="../js/kadmin.js" type="text/javascript">//</script>
+      <!-- Dependencies for the widget plugin -->
+      <!-- tinymce with static js loading  -->
+      <script src="../../../tinymce/3.5.2/jscripts/tiny_mce/tiny_mce_src.js" type="text/javascript">//</script>
+      <script src="../../../tinymce/3.5.2/jscripts/tiny_mce/themes/advanced/editor_template_src.js" type="text/javascript"></script>
+      <script src="../../../ux2/tinymce/jquery.tinysafe.js" type="text/javascript">//</script>
+
       <script src="../js/swfobject.js" type="text/javascript">//</script>
 
-      <!-- Page specific JS and CSS -->
-      <link rel="stylesheet" href="demo.css" type="text/css" />
-      <script src="test.js" type="text/javascript"></script>
+      <!-- The widget plugin JS -->
+      <script src="../editor_plugin_src.js" type="text/javascript"></script>
+      <script src="../langs/en.js" type="text/javascript"></script>
 
+      <!-- Page specific JS  -->
+      <script src="test.js" type="text/javascript"></script>
 
   </head>
 
@@ -49,30 +42,6 @@
     <ol id="qunit-tests"></ol>  
 
     <div id="main">
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui tellus,
-        bibendum id tincidunt quis, adipiscing in ipsum. Praesent eu leo nisl.
-        Curabitur accumsan placerat mauris, vulputate tincidunt nunc porttitor
-        suscipit. Suspendisse aliquet velit vitae lectus eleifend non dapibus massa
-        congue. Morbi eu sem nisi. Integer arcu odio, suscipit eu ultricies eget,
-        aliquam eget ligula. Fusce at tortor a ipsum pellentesque ultrices nec nec
-        augue.
-      </p>
-
-      <textarea name="text" rows="1" cols="40" class="mceEditor">Pellentesque in sagittis ante. Ut porttitor
-sollicitudin fringilla. Proin sed eros tortor, nec luctus risus! Curabitur
-adipiscing ullamcorper convallis. Class aptent taciti sociosqu ad litora
-torquent per conubia nostra, per inceptos himenaeos.
-      </textarea>
-
-      <p>
-        Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
-        Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
-        Suspendisse bibendum dui ut diam aliquet non iaculis ante faucibus.
-        Curabitur sit amet orci nulla!
-      </p>
-
     </div>
 
   </body>
