--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -1,112 +1,112 @@
 #chatter-panel {
-	.pushContainer();
-	font-family: @fancyFont;
-	.help-block {
-		color: #ccc;
-		font-size: .75em;
-		font-family: @fancyFont;
-	}
-	.timeago {
-		font-family: @fancyFont;
-		font-size: 0.8em;
-		display: block;
-	}
+    .pushContainer();
+    font-family: @fancyFont;
+    .help-block {
+        color: #ccc;
+        font-size: .75em;
+        font-family: @fancyFont;
+    }
+    .timeago {
+        font-family: @fancyFont;
+        font-size: 0.8em;
+        display: block;
+    }
 }
 #chatter-wrapper.active, #chatter-wrapper.active a {
-	background: @pushDownBg url('../img/vertical_stripes.png') top left repeat !important;
-	position: relative;   
-	z-index: 1; 
-	margin: 0;    
+    background: @pushDownBg url('../img/vertical_stripes.png') top left repeat !important;
+    position: relative;
+    z-index: 1;
+    margin: 0;
 }
 #chatter-wrapper.active {
-	bottom: -0.9em;
+    bottom: -0.9em;
 }
 #chatter-wrapper.active a {
-	bottom: 1.05em;
-	color: #fff !important;
-	text-shadow: none !important;
-	&:after {
-		display:none !important;
-	}
+    bottom: 1.05em;
+    color: #fff !important;
+    text-shadow: none !important;
+    &:after {
+        display:none !important;
+    }
 }
 #chatter-user-info {
-	.css3_border_radius(.5em);
-	color: @baseColor1;
-	font-family: @fancyFont;
-	margin: 0 0 30px 0;
-	a {
-		color: #000000;
-		&:hover {
-			text-decoration: underline;
-		}
-	}
-	strong {
-		font-size: 1em;
-	}
-	.user-avatar {
-		.avatar {
-			width: 35px;
-		}
-		width: 35px;
-		position: relative;
-		float: left;
-	}
-	.user-info {
-		position: relative;
-		margin-left: 45px;
-		.profile-link {
-			display: block;
-			font-size: 0.7em;
-		}
-	}
-	.user-stats {
-		clear: both;
-		display: block;
-		position: relative;
-		color: #000000;
-		margin-top: 10px;
-		ul {
-			padding: 0;
-			margin: 0;
-			list-style: none;
-			overflow: hidden;
-			> li {
-				.css3_border_radius();
-				background-color: @bodyBg !important;
-				width: 28%;
-				margin-right: 2px;
-				font-size: 0.75em;
-				line-height: 1.5em;
-				display: inline-block;
-				padding: 5px;
-				vertical-align: middle;
-				strong {
-					font-size: 1.5em;
-					display: block;
-				}
-			}
-			> li:last-child {
-				margin-right: 0;
-			}
-		}
-	}
-}      
-#chatter-user-info img {
-	float:left;
-	margin-right:10px;
+    .css3_border_radius(.5em);
+    color: @baseColor1;
+    font-family: @fancyFont;
+    margin: 0 0 30px 0;
+    a {
+        color: #000000;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+    strong {
+        font-size: 1em;
+    }
+    img {
+        float:left;
+        margin-right:10px;
+    }
+    .user-avatar {
+        .avatar {
+            width: 35px;
+        }
+        width: 35px;
+        position: relative;
+        float: left;
+    }
+    .user-info {
+        position: relative;
+        margin-left: 45px;
+        .profile-link {
+            display: block;
+            font-size: 0.7em;
+        }
+    }
+    .user-stats {
+        clear: both;
+        display: block;
+        position: relative;
+        color: #000000;
+        margin-top: 10px;
+        ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            overflow: hidden;
+            > li {
+                .css3_border_radius();
+                background-color: @bodyBg !important;
+                width: 25%;
+                margin-right: 2px;
+                font-size: 0.75em;
+                line-height: 1.5em;
+                display: inline-block;
+                padding: 0.5em;
+                vertical-align: middle;
+                strong {
+                    font-size: 1.5em;
+                    display: block;
+                }
+            }
+            > li:last-child {
+                margin-right: 0;
+            }
+        }
+    }
 }
 .chatter-options-panel {
-	font-size: 0.9em;
-	clear: both;
-	margin-top: 16px;
-	opacity: 0;
+    font-size: 0.9em;
+    clear: both;
+    margin-top: 16px;
+    opacity: 0;
 }
 .panel-header {
-	position: relative;
-	.post-options {
+    position: relative;
+    .post-options {
         position: absolute;
         top: .6em;
-    	right: .73em;
+        right: .73em;
         font-size: 0.7em;
         font-weight: normal;
         vertical-align: text-bottom;
@@ -114,67 +114,67 @@
             text-decoration: underline;
         }
         .add-new-post {
-        	margin-right: 10px;
+            margin-right: 10px;
         }
     }
     .new-post {
-    	display: none;
-		form {
-			margin-bottom: 5px;
-		}
-		.new-post-text {
-			background-color: #ffffff !important;
-			width: 100%;
-			height: 100px;
-			font-size: 0.8em;
-		}
-		.help-block {
-			width: 100%;
-			color: #555555;
-		}
-		.actions {
-			margin-top: 15px;
-		}
-	}
+        display: none;
+        form {
+            margin-bottom: 5px;
+        }
+        .new-post-text {
+            background-color: #ffffff !important;
+            width: 100%;
+            height: 100px;
+            font-size: 0.8em;
+        }
+        .help-block {
+            width: 100%;
+            color: #555555;
+        }
+        .actions {
+            margin-top: 15px;
+        }
+    }
 }
 .panel-item-content {
-	position: relative;
-	margin-left: 48px;
-	padding-left: .73em;
-	//min-height: 48px;
-	a {
-		color: @linkColor;
-	}
-	p {
-		margin-bottom: 0;
-	}
-	.fullname {
-		font-family: @fancyFont;
-		font-weight: bold;
-	}
-	.reply i, .repost i {
-		padding-right: 5px;
-	}
-	.quip {
-		padding: 5px 0 10px;
-	}
-	.repost-box, .reply-box {
-		margin-top: 10px;
-		padding: 10px;
-		background: lighten(#c8c8c8, 10%);
-		.css3_border_radius(.5em);
-		display:none;
-		form {
-			padding: 0;
-			margin: 0;
-		}
-		.control-group {
-			padding-bottom: 0;
-		}
-	}
-	.repost-box {
-		text-align: center;
-	}
+    position: relative;
+    margin-left: 48px;
+    padding-left: .73em;
+    //min-height: 48px;
+    a {
+        color: @linkColor;
+    }
+    p {
+        margin-bottom: 0;
+    }
+    .fullname {
+        font-family: @fancyFont;
+        font-weight: bold;
+    }
+    .reply i, .repost i {
+        padding-right: 5px;
+    }
+    .quip {
+        padding: 5px 0 10px;
+    }
+    .repost-box, .reply-box {
+        margin-top: 10px;
+        padding: 10px;
+        background: lighten(#c8c8c8, 10%);
+        .css3_border_radius(.5em);
+        display:none;
+        form {
+            padding: 0;
+            margin: 0;
+        }
+        .control-group {
+            padding-bottom: 0;
+        }
+    }
+    .repost-box {
+        text-align: center;
+    }
 }
 .panel-item-avatar {
     position: absolute;
@@ -189,73 +189,73 @@
     top: .25em;
     right: .73em;
     .timeago, .post-options {
-		font-family: @fancyFont;
-		font-size: 0.8em;
-		padding: 2.5px 5px;
-		color: #000000;
-		display: block;
-	}
-	.post-options {
-		background-color: lighten(#c8c8c8, 10%);
-		.css3_border_radius();
-		display: none;
-		a {
-			color: #000000;
-			display: inline-block;
-			padding: 0 5px;
-			text-align: center;
-			vertical-align: middle;
-			&:hover {
-				text-decoration: underline;
-			}
-			i {
-				padding-right: 5px;
-			}
-		}
-		.view-more, .view-less {
-			display: none;
-		}
-	}
+        font-family: @fancyFont;
+        font-size: 0.8em;
+        padding: 2.5px 5px;
+        color: #000000;
+        display: block;
+    }
+    .post-options {
+        background-color: lighten(#c8c8c8, 10%);
+        .css3_border_radius();
+        display: none;
+        a {
+            color: #000000;
+            display: inline-block;
+            padding: 0 5px;
+            text-align: center;
+            vertical-align: middle;
+            &:hover {
+                text-decoration: underline;
+            }
+            i {
+                padding-right: 5px;
+            }
+        }
+        .view-more, .view-less {
+            display: none;
+        }
+    }
 }
 .panel-item-footer {
-	display: block;
+    display: block;
     font-size: 0.8em;
 }
 .newMessage {
-	.panel-item-header {
-		.post-options {
-			background-color: lighten(#DDC996, 10%);
-		}
-	}
+    .panel-item-header {
+        .post-options {
+            background-color: lighten(#DDC996, 10%);
+        }
+    }
 }
 .hide-original {
     position: relative;
     display: none
 }
 .original-quip {
-	margin-top: 1em;
-	.gradientBar(lighten(@pushDownBg, 20%), lighten(@pushDownBg, 10%));
+    margin-top: 1em;
+    .gradientBar(lighten(@pushDownBg, 20%), lighten(@pushDownBg, 10%));
 }
 .conversation-controls {
-	font-family: @fancyFont;
-	font-size: 0.9em;
-	a {
-		margin-right: 10px;
-		&:hover {
-			text-decoration: underline;
-		}
-	}
+    font-family: @fancyFont;
+    font-size: 0.9em;
+    a {
+        margin-right: 10px;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 .in-reply-to {
-	&:hover {
-		cursor: pointer;
-	} 
+    &:hover {
+        cursor: pointer;
+    }
 }
 .btn-chatter {
     color: #ffffff !important;
 }
 .chatter-messages-users {
-	.clearfix();
+    .clearfix();
     margin: 0 (@space * 1em)/2 (@space * 1em);
     padding: (@space * 1em)/2;
     background: darken(@baseColor2, 10%);
@@ -263,129 +263,129 @@
     position: relative;
     //z-index: -1;
     .box-sizing(border-box);
-	.css3_border_radius(.5em);
-	.col(4);
-	font-family: @fancyFont;
-	font-size: 0.8em;
-	.find-user {
-		margin-bottom: 10px;
-		.search-chatter-box {
-			width: 97%;
-		}
-	}
-	.user-item {
-		.css3_border_radius(.3em);
-		position: relative;
-		padding: 10px 0;
-		margin-bottom: 5px;
-		cursor: pointer;
-		.user-item-avatar {
-			position: absolute;
-    		left: 5px;
-    		top: 5px;
-    		.avatar {
-				width: 40px;
-				position: relative;
-				float: left;
-			}
-		}
-		.user-item-content {
-			position: relative;
-			margin-left: 55px;
-			.summary {
-				font-family: @baseFont;
-			}
-		}
-		&:hover, &.selected {
-			background-color: @baseColor2;
-		}
-		&.selected {
-			background-color: @baseColor2;
-			&:before {
-        		.trianglePointer(right, @baseColor2, 1.2em);
-        		position: absolute;
-        		top: 1.1em;
-        		right: -1.2em;
-    		}
-		}
-	}
+    .css3_border_radius(.5em);
+    .col(4);
+    font-family: @fancyFont;
+    font-size: 0.8em;
+    .find-user {
+        margin-bottom: 10px;
+        .search-chatter-box {
+            width: 97%;
+        }
+    }
+    .user-item {
+        .css3_border_radius(.3em);
+        position: relative;
+        padding: 10px 0;
+        margin-bottom: 5px;
+        cursor: pointer;
+        .user-item-avatar {
+            position: absolute;
+            left: 5px;
+            top: 5px;
+            .avatar {
+                width: 40px;
+                position: relative;
+                float: left;
+            }
+        }
+        .user-item-content {
+            position: relative;
+            margin-left: 55px;
+            .summary {
+                font-family: @baseFont;
+            }
+        }
+        &:hover, &.selected {
+            background-color: @baseColor2;
+        }
+        &.selected {
+            background-color: @baseColor2;
+            &:before {
+                .trianglePointer(right, @baseColor2, 1.2em);
+                position: absolute;
+                top: 1.1em;
+                right: -1.2em;
+            }
+        }
+    }
 }
 .chatter-messages {
-	.col(8);
-	.message-item {
-		.css3_border_radius(.5em);
-		position: relative;
-		float: left;
-		padding: 10px;
-		margin: 10px 0;
-		font-family: @fancyFont;
-		font-size: 0.9em;
-		min-height: 40px;
-		background-color: @baseColor2;
-		width: 70%;
-		text-align: left;
-		.message-item-avatar {
-			position: absolute;
-    		left: 10px;
-    		top: 5px;
-    		.avatar {
-				width: 40px;
-				position: relative;
-				float: left;
-			}
-		}
-		.message-item-content {
-			position: relative;
-			margin-left: 48px;
-			.content {
-				font-family: @baseFont;
-			}
-		}
-		&.other-user {
-			background-color: lighten(#c8c8c8, 10%);
-			text-align: right;
-			float: right;
-			.message-item-avatar {
-				right: 10px;
-    			top: 5px;
-    			.avatar {
-					float: right;
-				}
-			}
-			.message-item-content {
-				margin-left: 0;
-				margin-right: 48px;
-			}
-		}
-	}
+    .col(8);
+    .message-item {
+        .css3_border_radius(.5em);
+        position: relative;
+        float: left;
+        padding: 10px;
+        margin: 10px 0;
+        font-family: @fancyFont;
+        font-size: 0.9em;
+        min-height: 40px;
+        background-color: @baseColor2;
+        width: 70%;
+        text-align: left;
+        .message-item-avatar {
+            position: absolute;
+            left: 10px;
+            top: 5px;
+            .avatar {
+                width: 40px;
+                position: relative;
+                float: left;
+            }
+        }
+        .message-item-content {
+            position: relative;
+            margin-left: 48px;
+            .content {
+                font-family: @baseFont;
+            }
+        }
+        &.other-user {
+            background-color: lighten(#c8c8c8, 10%);
+            text-align: right;
+            float: right;
+            .message-item-avatar {
+                right: 10px;
+                top: 5px;
+                .avatar {
+                    float: right;
+                }
+            }
+            .message-item-content {
+                margin-left: 0;
+                margin-right: 48px;
+            }
+        }
+    }
 }
 .chatter-post-add-form {
-	position: relative;
-	//float: left;
-	display: block;
-	width: 100%;
-	margin-bottom: 10px;
-	textarea.quip-text {
-		width: 98%;
-		height: 100px;
-	}
+    position: relative;
+    //float: left;
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    textarea.quip-text {
+        width: 98%;
+        height: 100px;
+    }
 }
 form#chatter-post-form {
-	position: relative;
-	button.searchButton {
-		top: 0;
-    	margin-top: 0;
-	}
+    position: relative;
+    button.searchButton {
+        top: 0;
+        margin-top: 0;
+    }
 }
 #chatter-recipient {
-	background-color: #ffffff !important;
-	width: 100%;
+    background-color: #ffffff !important;
+    width: 100%;
 }
 .recent-topics, .followed-topics {
-	margin-top: 0.75em;
-	h3 {
-		margin-bottom: 0;
-	}
+    margin-top: 0.75em;
+    h3 {
+        margin-bottom: 0;
+    }
 }
 .userRelated {
     .css3_border_radius(.5em);
