Fix the grids' vertical border artifact on resize. Fixes #974366

--- a/karl/views/static/ux2/plugins/popper-gridbox/_slickgrid.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/_slickgrid.less
@@ -27,7 +27,8 @@
         @fontSize: 0.889em;
 
         /* padding: 0.375em .5em; */
-        padding: 0.375em 7.5834px;
+        //padding: 0.375em 7.5834px;
+        padding: 5px 7.5834px;
         font-size: @fontSize;
         td {
             /*font-size: @fontSize;*/
@@ -40,7 +41,7 @@
 
         @media only screen and (min-width: 640px) {
             /* padding: 0.375em 1em; */
-            padding: 0.375em 15.1667px;
+            padding: 5px 15.1667px;
         }
     }
 
