--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -25,16 +25,16 @@
 .karl-wikitoc-grid .grid-canvas .even div{background:#f1eade;}
 .karl-wikitoc-grid .grid-canvas .odd div{background:#f9f5f0;}
 .karl-wikitoc-grid .grid-canvas .karl-wikitoc-grid-row-hover .slick-cell{background:#ffffff;}
-.karl-wikitoc-grid .grid-canvas .slick-cell{padding:0.375em 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .grid-canvas .slick-cell td{font-size:1em;}
+.karl-wikitoc-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .grid-canvas .slick-cell td{font-size:1em;}
 body .karl-wikitoc-grid .grid-canvas .slick-cell{line-height:0.889em;}
-@media only screen and (min-width:640px){.karl-wikitoc-grid .grid-canvas .slick-cell{padding:0.375em 15.1667px;}}.karl-wikitoc-grid .grid-canvas .slick-cell a,.karl-wikitoc-grid .grid-canvas .slick-cell a:visited,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
+@media only screen and (min-width:640px){.karl-wikitoc-grid .grid-canvas .slick-cell{padding:5px 15.1667px;}}.karl-wikitoc-grid .grid-canvas .slick-cell a,.karl-wikitoc-grid .grid-canvas .slick-cell a:visited,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
 .karl-wikitoc-grid .grid-canvas .slick-cell a:hover,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a:hover{color:#82bbd4;text-decoration:none;border-bottom:none;}
 .karl-wikitoc-grid .grid-canvas .slick-cell table{height:100%;border:0 none;padding:0;background:none;}
 .karl-wikitoc-grid .grid-canvas .slick-cell td{border:0 none;padding:0;vertical-align:middle;text-align:left;}
 .karl-wikitoc-grid .slick-header{border-top:0;border-bottom:0;}
-.karl-wikitoc-grid .slick-header-columns{background:#8f806f;}.karl-wikitoc-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
+.karl-wikitoc-grid .slick-header-columns{background:#8f806f;}.karl-wikitoc-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
 body .karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{line-height:0.889em;}
-@media only screen and (min-width:640px){.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 15.1667px;}}
+@media only screen and (min-width:640px){.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 15.1667px;}}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column a,.karl-wikitoc-grid .slick-header-columns .slick-header-column a:visited{color:#dbcfc1;}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column a:hover{color:#fff;}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default a,.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default a:visited{color:#dbcfc1;}
@@ -50,16 +50,16 @@ body .karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-defa
 .karl-wikitoc-grid .grid-canvas .even div{background:#f1eade;}
 .karl-wikitoc-grid .grid-canvas .odd div{background:#f9f5f0;}
 .karl-wikitoc-grid .grid-canvas .karl-wikitoc-grid-row-hover .slick-cell{background:#ffffff;}
-.karl-wikitoc-grid .grid-canvas .slick-cell{padding:0.375em 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .grid-canvas .slick-cell td{font-size:1em;}
+.karl-wikitoc-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .grid-canvas .slick-cell td{font-size:1em;}
 body .karl-wikitoc-grid .grid-canvas .slick-cell{line-height:0.889em;}
-@media only screen and (min-width:640px){.karl-wikitoc-grid .grid-canvas .slick-cell{padding:0.375em 15.1667px;}}.karl-wikitoc-grid .grid-canvas .slick-cell a,.karl-wikitoc-grid .grid-canvas .slick-cell a:visited,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
+@media only screen and (min-width:640px){.karl-wikitoc-grid .grid-canvas .slick-cell{padding:5px 15.1667px;}}.karl-wikitoc-grid .grid-canvas .slick-cell a,.karl-wikitoc-grid .grid-canvas .slick-cell a:visited,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
 .karl-wikitoc-grid .grid-canvas .slick-cell a:hover,.karl-wikitoc-grid .grid-canvas .slick-cell .ui-widget-content a:hover{color:#82bbd4;text-decoration:none;border-bottom:none;}
 .karl-wikitoc-grid .grid-canvas .slick-cell table{height:100%;border:0 none;padding:0;background:none;}
 .karl-wikitoc-grid .grid-canvas .slick-cell td{border:0 none;padding:0;vertical-align:middle;text-align:left;}
 .karl-wikitoc-grid .slick-header{border-top:0;border-bottom:0;}
-.karl-wikitoc-grid .slick-header-columns{background:#8f806f;}.karl-wikitoc-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
+.karl-wikitoc-grid .slick-header-columns{background:#8f806f;}.karl-wikitoc-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 7.5834px;font-size:0.889em;}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
 body .karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{line-height:0.889em;}
-@media only screen and (min-width:640px){.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 15.1667px;}}
+@media only screen and (min-width:640px){.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 15.1667px;}}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column a,.karl-wikitoc-grid .slick-header-columns .slick-header-column a:visited{color:#dbcfc1;}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column a:hover{color:#fff;}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default{background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default a,.karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-default a:visited{color:#dbcfc1;}
@@ -86,16 +86,16 @@ body>.loading-indicator label{padding-left:20px;background:url('plugins/popper-g
 .pp-grid .grid-canvas .even div{background:#f1eade;}
 .pp-grid .grid-canvas .odd div{background:#f9f5f0;}
 .pp-grid .grid-canvas .karl-wikitoc-grid-row-hover .slick-cell{background:#ffffff;}
-.pp-grid .grid-canvas .slick-cell{padding:0.375em 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:1em;}
+.pp-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:1em;}
 body .pp-grid .grid-canvas .slick-cell{line-height:0.889em;}
-@media only screen and (min-width:640px){.pp-grid .grid-canvas .slick-cell{padding:0.375em 15.1667px;}}.pp-grid .grid-canvas .slick-cell a,.pp-grid .grid-canvas .slick-cell a:visited,.pp-grid .grid-canvas .slick-cell .ui-widget-content a,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
+@media only screen and (min-width:640px){.pp-grid .grid-canvas .slick-cell{padding:5px 15.1667px;}}.pp-grid .grid-canvas .slick-cell a,.pp-grid .grid-canvas .slick-cell a:visited,.pp-grid .grid-canvas .slick-cell .ui-widget-content a,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
 .pp-grid .grid-canvas .slick-cell a:hover,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:hover{color:#82bbd4;text-decoration:none;border-bottom:none;}
 .pp-grid .grid-canvas .slick-cell table{height:100%;border:0 none;padding:0;background:none;}
 .pp-grid .grid-canvas .slick-cell td{border:0 none;padding:0;vertical-align:middle;text-align:left;}
 .pp-grid .slick-header{border-top:0;border-bottom:0;}
-.pp-grid .slick-header-columns{background:#8f806f;}.pp-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 7.5834px;font-size:0.889em;}.pp-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
+.pp-grid .slick-header-columns{background:#8f806f;}.pp-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
 body .pp-grid .slick-header-columns .slick-header-column.ui-state-default{line-height:0.889em;}
-@media only screen and (min-width:640px){.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 15.1667px;}}
+@media only screen and (min-width:640px){.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 15.1667px;}}
 .pp-grid .slick-header-columns .slick-header-column a,.pp-grid .slick-header-columns .slick-header-column a:visited{color:#dbcfc1;}
 .pp-grid .slick-header-columns .slick-header-column a:hover{color:#fff;}
 .pp-grid .slick-header-columns .slick-header-column.ui-state-default{background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default a,.pp-grid .slick-header-columns .slick-header-column.ui-state-default a:visited{color:#dbcfc1;}
@@ -111,16 +111,16 @@ body .pp-grid .slick-header-columns .slick-header-column.ui-state-default{line-h
 .pp-grid .grid-canvas .even div{background:#f1eade;}
 .pp-grid .grid-canvas .odd div{background:#f9f5f0;}
 .pp-grid .grid-canvas .karl-wikitoc-grid-row-hover .slick-cell{background:#ffffff;}
-.pp-grid .grid-canvas .slick-cell{padding:0.375em 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:1em;}
+.pp-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:1em;}
 body .pp-grid .grid-canvas .slick-cell{line-height:0.889em;}
-@media only screen and (min-width:640px){.pp-grid .grid-canvas .slick-cell{padding:0.375em 15.1667px;}}.pp-grid .grid-canvas .slick-cell a,.pp-grid .grid-canvas .slick-cell a:visited,.pp-grid .grid-canvas .slick-cell .ui-widget-content a,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
+@media only screen and (min-width:640px){.pp-grid .grid-canvas .slick-cell{padding:5px 15.1667px;}}.pp-grid .grid-canvas .slick-cell a,.pp-grid .grid-canvas .slick-cell a:visited,.pp-grid .grid-canvas .slick-cell .ui-widget-content a,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3d8fb3;text-decoration:none;}
 .pp-grid .grid-canvas .slick-cell a:hover,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:hover{color:#82bbd4;text-decoration:none;border-bottom:none;}
 .pp-grid .grid-canvas .slick-cell table{height:100%;border:0 none;padding:0;background:none;}
 .pp-grid .grid-canvas .slick-cell td{border:0 none;padding:0;vertical-align:middle;text-align:left;}
 .pp-grid .slick-header{border-top:0;border-bottom:0;}
-.pp-grid .slick-header-columns{background:#8f806f;}.pp-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 7.5834px;font-size:0.889em;}.pp-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
+.pp-grid .slick-header-columns{background:#8f806f;}.pp-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
 body .pp-grid .slick-header-columns .slick-header-column.ui-state-default{line-height:0.889em;}
-@media only screen and (min-width:640px){.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:0.375em 15.1667px;}}
+@media only screen and (min-width:640px){.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 15.1667px;}}
 .pp-grid .slick-header-columns .slick-header-column a,.pp-grid .slick-header-columns .slick-header-column a:visited{color:#dbcfc1;}
 .pp-grid .slick-header-columns .slick-header-column a:hover{color:#fff;}
 .pp-grid .slick-header-columns .slick-header-column.ui-state-default{background:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default a,.pp-grid .slick-header-columns .slick-header-column.ui-state-default a:visited{color:#dbcfc1;}
@@ -199,5 +199,4 @@ a#global-logo{padding-left:35px;}
 .tagweight6{font-size:200%;}
 .tagweight7{font-size:220%;color:green;}
 a.priority{padding-bottom:5px;font-style:italic;font-weight:bold;display:block;}
-#calendar_portlet{padding-bottom:1em;}#calendar_portlet .event_title{padding-left:20px;}
 table.messageBoard th.forums{width:25%;}
