fixed opensearch-action icon

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -525,7 +525,9 @@ form#send-message {
 #email-action {
     background-position: -104px 0%;
 }
-
+#opensearch-action {
+    background-position: -130px 0%;
+}
 #tabular-view,
 #picture-view {
     background-color: darken(@baseColor2, 15%);
