--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -574,6 +574,7 @@ form.addTag button{position:absolute;top:0;right:0;font-size:0.75em;font-family:
 #print-action{background-position:-52px 0%;}
 #csv-action{background-position:-78px 0%;}
 #email-action{background-position:-104px 0%;}
+#opensearch-action{background-position:-130px 0%;}
 #tabular-view,#picture-view{background-color:#bfaa91;border:none;-webkit-box-shadow:0 1px 0 0 rgba(0, 0, 0, 0.4),0 -1px 0 0 rgba(255, 255, 255, 0.5);-moz-box-shadow:0 1px 0 0 rgba(0, 0, 0, 0.4),0 -1px 0 0 rgba(255, 255, 255, 0.5);box-shadow:0 1px 0 0 rgba(0, 0, 0, 0.4),0 -1px 0 0 rgba(255, 255, 255, 0.5);}#tabular-view:hover,#picture-view:hover{background-color:#f1eade;}
 li[selected="selected"] #tabular-view,li[selected="selected"] #picture-view{background-color:#a5998c;-webkit-box-shadow:0 -1px 0 0 rgba(0, 0, 0, 0.4),0 1px 0 0 rgba(255, 255, 255, 0.5);-moz-box-shadow:0 -1px 0 0 rgba(0, 0, 0, 0.4),0 1px 0 0 rgba(255, 255, 255, 0.5);box-shadow:0 -1px 0 0 rgba(0, 0, 0, 0.4),0 1px 0 0 rgba(255, 255, 255, 0.5);}
 #tabular-view{background-position:0% 0%;}
