fixed intranet right portlet calendar styling

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -937,7 +937,7 @@ body > footer {
                 padding: 0 0 1em;
                 margin: 0;
                 .event_title {
-                    padding-left: 20px;
+                    padding-left: 10px;
                 }
                 li {
                     line-height: 1.25em;
@@ -973,6 +973,17 @@ body > footer {
             h3 {
                 font-size: 1.333;
                 margin-top: 0;
+            }
+            ul#calendar_portlet {
+                list-style: none;
+                padding: 0 0 1em;
+                margin: 0;
+                .event_title {
+                    padding-left: 10px;
+                }
+                li {
+                    line-height: 1.25em;
+                }
             }
             .more {
                 .btn();
