--- a/karl/views/static/ux2/css/responsive/640.less
+++ b/karl/views/static/ux2/css/responsive/640.less
@@ -8,14 +8,14 @@ th, td {
 .description {
     font-size: 1.185em;
     font-style: italic;
-}	
+}
 h2#search-toggle {
-	height: 2.35em;
-	width: 2.35em;		    
+    height: 2.35em;
+    width: 2.35em;
 }
 #top-bar {
     .gradientBar(#444, #222);
-    text-shadow: 0 -1px 0 black;    	
+    text-shadow: 0 -1px 0 black;
 }
 #bcpanel-global-nav {
     .horList();
@@ -27,11 +27,11 @@ h2#search-toggle {
     }
 }
 #bcpanel-global-logo {
-	float: left;
-	padding: 0 0 0 (@space * 1em);
-	margin: 0 (@space * 1em) 0 0;
-	background-position: (@space * 1em) 50%;
-}    
+    float: left;
+    padding: 0 0 0 (@space * 1em);
+    margin: 0 (@space * 1em) 0 0;
+    background-position: (@space * 1em) 50%;
+}
 a#global-logo{
     margin-left: 0;
 }
@@ -57,51 +57,51 @@ h2#navigation-toggle {
     font-family: @baseFont;
     .css3_box_shadow(none);
     > li {
-    	float:left;
+        float:left;
         border-top: none;
-        border-bottom: none;	
-        position: static;	    
+        border-bottom: none;
+        position: static;
     }
     > li > a {
-    	margin: 0 1px 0 0;
-    	z-index: 1;
-    	display: block;
-    	line-height: 2.6923em;
-    	font-family: @fancyFont;
+        margin: 0 1px 0 0;
+        z-index: 1;
+        display: block;
+        line-height: 2.6923em;
+        font-family: @fancyFont;
         font-weight: normal;
-    	font-size: 0.889em;
-    	color: #bbb;
-    	background-image: none;
-    	text-decoration: none;
-    	&:hover { 
-    		color: #fff;
-    	}		   
+        font-size: 0.889em;
+        color: #bbb;
+        background-image: none;
+        text-decoration: none;
+        &:hover {
+            color: #fff;
+        }
     }
     .selected a {
-    	color: #fff;	
-    	margin-bottom: 0;
-    	background: #000;
+        color: #fff;
+        margin-bottom: 0;
+        background: #000;
         font-weight: normal;
-    	&:hover {
+        &:hover {
             border-bottom: none;
-    	}
-    }	
+        }
+    }
     .selected a:after {
-    	content: "";
-    	font-size: 0;
+        content: "";
+        font-size: 0;
         display: block;
         position: absolute;
         top: auto;
         bottom: 0px;
         left: 50%;
         margin-left: -7px;
-        width:0; 
-        height:0; 
-        border-left: 7px solid transparent; 
+        width:0;
+        height:0;
+        border-left: 7px solid transparent;
         border-right: 7px solid transparent;
         border-bottom: 7px solid @bodyBg;
         border-top: 0;
-    }                
+    }
 }
 #global-nav .dropdown-menu li {
     display: list-item;
@@ -135,11 +135,11 @@ a.moreToggle {
     direction: ltr;
     width: 19px;
     &:before {
-        display: none;   
+        display: none;
     }
 }
 .btn-group a.moreToggle {
-    .css3_box_shadow(none);    
+    .css3_box_shadow(none);
 }
 #global-nav a.moreToggle {
     background-image: url('../img/cog_globalnav.png');
@@ -161,7 +161,7 @@ form#search-form {
     .css3_border_radius(0);
     font-size: 1em;
     font-family: @baseFont;
-    background-color: @pushDownBg; /* for IE to prevent overriding with .quickpanel's black background */        
+    background-color: @pushDownBg; /* for IE to prevent overriding with .quickpanel's black background */
 }
 h2#search-toggle:before {
     display: none;
@@ -177,9 +177,9 @@ section.main header {
 section.main aside {
     float: right;
     width: 17.713em;
-	padding: (@space * 1em);
-	margin: 0 0 (@space * 1em) (@space * 1em);
-	font-size: 0.889em;
+    padding: (@space * 1em);
+    margin: 0 0 (@space * 1em) (@space * 1em);
+    font-size: 0.889em;
 }
 .column {
     padding: 0; //(@space * 1em) 0;
@@ -187,7 +187,7 @@ section.main aside {
 }
 .res {
     display: block;
-    float: left;    
+    float: left;
 }
 /* @end */
 
@@ -195,7 +195,7 @@ fieldset legend {
     padding-left: 25%;
     width: 75%;
     *padding: 0 0 5px 23%;
-    line-height: @baseLineHeight * 2;    
+    line-height: @baseLineHeight * 2;
 }
 // Float the labels left
 .form-horizontal {
@@ -214,10 +214,10 @@ fieldset legend {
     // Move over buttons in .form-actions to align with .controls
     .form-actions {
       padding-left: 22.75%;
-    }    
+    }
 }
 .form-actions {
-    padding: (@baseLineHeight - 1) 20px @baseLineHeight;    
+    padding: (@baseLineHeight - 1) 20px @baseLineHeight;
 }
 
 section.main .vcard .adr {
@@ -228,5 +228,11 @@ section.main .vcard aside {
 }
 #members-info {
     display: none;
-}     
+}
+.filter {
+    padding: @space/3 * 0.9em;
+    .alphabet {
+        font-size: .9em;
+    }
+}
 }
